# mlops

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
notebooks/: mlops_hyperparameter_tuning.ipynb  mlops_hyperparameter_tuning_automatic.ipynb
src/mlops_proj/data/: glue_data_module.py
src/mlops_proj/models/: glue_transformer.py
src/mlops_proj/training/: train.py
