[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "lightning>=2.5.6",
    "optuna>=4.6.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
